<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/bt_field_container"
        android:layout_marginTop="16dp"
        android:weightSum="2">

        <ImageView
            android:id="@+id/bt_card_form_cardholder_name_icon"
            style="@style/bt_card_form_icon"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/bt_edit_text_icon_padding"
            android:paddingLeft="@dimen/bt_edit_text_icon_padding">

            <TextView
                style="@style/bt_LabelStyle.Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_form_hint_cardholder_name" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/bt_TextInputStyle"
                android:labelFor="@+id/bt_card_form_cardholder_name"
                tools:ignore="RtlCompat">

                <com.braintreepayments.cardform.view.CardholderNameEditText
                    android:id="@+id/bt_card_form_cardholder_name"
                    style="@style/bt_card_form_field" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/bt_field_container">

        <ImageView
            android:id="@+id/bt_card_form_card_number_icon"
            style="@style/bt_card_form_icon"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/bt_edit_text_icon_padding"
            android:paddingLeft="@dimen/bt_edit_text_icon_padding">

            <TextView
                style="@style/bt_LabelStyle.Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_form_hint_card_number" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/bt_TextInputStyle"
                android:labelFor="@+id/bt_card_form_card_number"
                tools:ignore="RtlCompat">

                <com.braintreepayments.cardform.view.CardEditText
                    android:id="@+id/bt_card_form_card_number"
                    style="@style/bt_card_form_field"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/bt_field_container">

        <ImageView
            style="@style/bt_card_form_icon"
            android:src="@drawable/bt_ic_card"
            android:visibility="invisible"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="@dimen/bt_edit_text_icon_padding">

            <TextView
                style="@style/bt_LabelStyle.Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_form_hint_expiration" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/bt_TextInputStyle"
                android:layout_width="match_parent"
                android:labelFor="@+id/bt_card_form_expiration">

                <com.braintreepayments.cardform.view.ExpirationDateEditText
                    android:id="@+id/bt_card_form_expiration"
                    style="@style/bt_card_form_field" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="@dimen/bt_edit_text_icon_padding">

            <TextView
                style="@style/bt_LabelStyle.Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_form_hint_cvv" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/bt_TextInputStyle"
                android:layout_width="match_parent"
                android:labelFor="@+id/bt_card_form_cvv">

                <com.braintreepayments.cardform.view.CvvEditText
                    android:id="@+id/bt_card_form_cvv"
                    style="@style/bt_card_form_field" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/bt_field_container"
        android:weightSum="2">

        <ImageView
            android:id="@+id/bt_card_form_postal_code_icon"
            style="@style/bt_card_form_icon"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/bt_edit_text_icon_padding"
            android:paddingLeft="@dimen/bt_edit_text_icon_padding">

            <TextView
                style="@style/bt_LabelStyle.Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_form_hint_postal_code" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/bt_TextInputStyle"
                android:labelFor="@+id/bt_card_form_postal_code"
                tools:ignore="RtlCompat">

                <com.braintreepayments.cardform.view.PostalCodeEditText
                    android:id="@+id/bt_card_form_postal_code"
                    style="@style/bt_card_form_field" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/bt_field_container"
        android:weightSum="5">

        <ImageView
            android:id="@+id/bt_card_form_mobile_number_icon"
            style="@style/bt_card_form_icon"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingStart="@dimen/bt_edit_text_icon_padding"
            android:paddingLeft="@dimen/bt_edit_text_icon_padding">

            <TextView
                style="@style/bt_LabelStyle.Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_form_hint_country_code" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/bt_TextInputStyle"
                android:labelFor="@+id/bt_card_form_country_code"
                tools:ignore="RtlCompat">

                <com.braintreepayments.cardform.view.CountryCodeEditText
                    android:id="@+id/bt_card_form_country_code"
                    style="@style/bt_card_form_field" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="@dimen/bt_edit_text_icon_padding"
            android:paddingLeft="@dimen/bt_edit_text_icon_padding">

            <TextView
                style="@style/bt_LabelStyle.Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_form_hint_mobile_number" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/bt_TextInputStyle"
                android:labelFor="@+id/bt_card_form_mobile_number"
                tools:ignore="RtlCompat">

                <com.braintreepayments.cardform.view.MobileNumberEditText
                    android:id="@+id/bt_card_form_mobile_number"
                    style="@style/bt_card_form_field" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/bt_card_form_mobile_number_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingStart="@dimen/bt_mobile_number_explanation_padding"
        android:paddingLeft="@dimen/bt_mobile_number_explanation_padding"
        android:paddingEnd="0dp"
        android:visibility="gone"
        tools:ignore="RtlCompat" />

    <LinearLayout
        style="@style/bt_field_container"
        android:paddingStart="@dimen/bt_mobile_number_explanation_padding"
        android:paddingLeft="@dimen/bt_mobile_number_explanation_padding"
        android:paddingEnd="0dp"
        android:paddingRight="0dp">

        <com.braintreepayments.cardform.view.InitialValueCheckBox
            android:id="@+id/bt_card_form_save_card_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bt_save_card_checkbox_left_margin"
            android:layout_marginLeft="@dimen/bt_save_card_checkbox_left_margin"
            android:text="@string/bt_save_card_checkbox_name" />
    </LinearLayout>
</merge>